--- a/style.css
+++ b/style.css
@@ -174,7 +174,7 @@ a.active {
   flex-direction: column;
   gap: 5px;
   width: 100%;
-  background-image: url("./img/backround/intro-design-mobile.png");
+  /* background-image: url("./img/backround/intro-design-mobile.png"); */
   background-size: cover;
   overflow: hidden;
 }
