--- a/style.css
+++ b/style.css
@@ -5,7 +5,6 @@ body {
   padding: 0;
   margin: 0;
   overflow-x: hidden;
-  overflow-y: scroll;
 }
 
 /* nav menu */
@@ -173,8 +172,8 @@ a.active {
   display: flex;
   flex-direction: column;
   gap: 5px;
-  width: 100%;
-  /* background-image: url("./img/backround/intro-design-mobile.png"); */
+  width: 80%;
+  background-image: url("./img/backround/intro-design-mobile.png");
   background-size: cover;
   overflow: hidden;
 }
